@@ -73,6 +73,11 @@ class DB_PDO extends DB_AuthCommon implements DB_Access_Interface
         return true;
     }
 
+    public function defaultKey()
+    {
+        return "id";
+    }
+
     /**
      * @param $fname
      * @return mixed
