@@ -55,6 +55,7 @@ Ver.3.10-dev
 - Modify FX.php for FileMaker Server to enable the "fmalt" and retrieve the record id on portal objects.
 - Modify FX.php for FileMaker Server to disable the surrogate input patch when using FileMaker Server 12
   (by specifying $dbDataType = 'FMPro12' in params.php).
+- The 'password' key in a definition file doesn't send to clients.
 - [INFO] FileMaker's portal objects requires FileMaker Server 9 or later.
 - [BUG FIX] Fix DataConverter_FMDateTime and DataConverter_MySQLDateTime's issue on Windows.
 
